# rust-sdk-python-bindings

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  requirement.txt  setup.py
.github/workflows/: ci-test.yml  generate-docs.yml
docs/: Makefile  conf.py  index.rst
examples/: copy_object.py  create_bucket.py  delete_object.py  form_upload_object.py  get_bucket_taggings.py  get_buckets.py  get_domains.py  get_objects.py  list_regions.py  modify_object_metadata.py  modify_object_status.py  move_object.py  restore_archived_object.py  set_object_type.py  stat_object.py  stat_objects.py
examples/api-generator/: client.rs  enums.rs  main.rs  mods.rs  path.rs
src/: credential.rs  download.rs  etag.rs  exceptions.rs  http.rs  lib.rs  objects.rs  upload.rs  upload_token.rs  utils.rs
src/apis/: index.rst  mod.rs
src/apis/storage/: async_fetch_object.rs  batch_ops.rs  copy_object.rs  create_bucket.rs  delete_bucket.rs  delete_bucket_taggings.rs  delete_object.rs  fetch_object.rs  get_async_fetch_task.rs  get_bucket_taggings.rs  get_buckets.rs  get_domains.rs  get_objects.rs  get_objects_v2.rs  index.rst  mod.rs  modify_object_life_cycle.rs  modify_object_metadata.rs  modify_object_status.rs  move_object.rs  prefetch_object.rs  put_object.rs  restore_archived_object.rs  resumable_upload_v1_bput.rs  resumable_upload_v1_make_block.rs  resumable_upload_v1_make_file.rs  resumable_upload_v2_abort_multipart_upload.rs  resumable_upload_v2_complete_multipart_upload.rs  resumable_upload_v2_initiate_multipart_upload.rs  resumable_upload_v2_list_parts.rs  resumable_upload_v2_upload_part.rs  set_bucket_private.rs  set_bucket_taggings.rs  set_buckets_mirror.rs  set_object_file_type.rs  stat_object.rs
src/http_client/: client.rs  mod.rs  region.rs
tests/: test_credential.py  test_download.py  test_etag.py  test_http.py  test_http_client.py  test_objects.py  test_upload.py  test_upload_token.py
