[package]
name = "qiniu-sdk-python-bindings"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bachue/rust-sdk-python-bindings.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Rust SDK Bindings to Python"
keywords = ["qiniu", "storage", "python"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qiniu_sdk_bindings"
crate-type = ["cdylib"]

[dependencies]
mime = "0.3.16"
smart-default = "0.6.0"
serde_json = "1.0.79"
pyo3 = { version = "0.16.4", features = ["abi3-py38", "extension-module", "multiple-pymethods", "serde"] }
pyo3-log = "0.6.0"
pyo3-asyncio = { version = "0.16.0", features = ["async-std-runtime"] }
qiniu-sdk = { version = "0.1.2", path = "rust-sdk/sdk", default-features = false, features = ["utils", "etag", "credential", "upload-token", "http", "http-client", "isahc", "trust_dns", "async"] }
async-std = { version = "1.6.3" }
anyhow = "1.0.57"
futures = "0.3.21"
