[package]
name = "qiniu-sdk-python-bindings"
version = "0.1.0"
authors = ["Rong Zhou <zhourong@qiniu.com>", "Shanghai Qiniu Information Technologies Co., Ltd."]
edition = "2021"
rust-version = "1.60.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/bachue/rust-sdk-python-bindings.git"
homepage = "https://www.qiniu.com"
description = "Qiniu Rust SDK Bindings to Python"
keywords = ["qiniu", "storage", "python"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "qiniu_sdk_bindings"
crate-type = ["cdylib"]

[dependencies]
mime = "0.3.16"
indexmap = "1.8.2"
dyn-clone = "1.0.5"
num-integer = "0.1.45"
smart-default = "0.6.0"
serde_json = "1.0.79"
pyo3 = { version = "0.16.4", features = ["abi3-py38", "extension-module", "multiple-pymethods"] }
pyo3-log = "0.6.0"
pyo3-asyncio = { version = "0.16.0", features = ["async-std-runtime"] }
qiniu-sdk = { version = "0.1.2", path = "rust-sdk/sdk", default-features = false, features = ["utils", "etag", "credential", "upload-token", "http", "http-client", "objects", "upload", "isahc", "trust_dns", "async"] }
async-std = "1.6.3"
anyhow = "1.0.57"
futures = "0.3.21"

[dev-dependencies]
walkdir = "2.3.2"
env_logger = "0.9.0"
serde = "1.0.137"
quote = "1.0.10"
proc-macro2 = "1.0.39"
serde_yaml = "0.8.24"
indexmap = "1.8.1"
convert_case = "0.5.0"
