[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "qiniu-sdk-alpha"
version = '0.0.3'
description = "Qiniu Rust SDK Bindings to Python"
authors = [
    { name = "Rong Zhou", email = "zhourong@qiniu.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
repository = "https://github.com/bachue/rust-sdk-python-bindings.git"
homepage = "https://www.qiniu.com"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "maturin>=0.13,<0.14"
]
[project.optional-dependencies]
tests = [
    "Sphinx>=4.0.0,<5.0.0",
    "aiofiles>=0.8.0,<0.9.0",
    "aiohttp>=3.0.0,<4.0.0"
]
